--- a/code/application.ipynb
+++ b/code/application.ipynb
@@ -1,57 +1,40 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "!pip install -q streamlit"
-      ],
+      "execution_count": 1,
       "metadata": {
         "id": "1o5HuTwGt7en"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install -q streamlit"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!npm install localtunnel"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Awdnty52yPYm",
-        "outputId": "bc2a170d-adc8-45a2-e422-09334cb5a11c"
+        "outputId": "f4ec8385-3268-4cf7-9709-876478df09a7"
       },
-      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35msaveError\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
-            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
+            "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No description\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No repository field.\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No README data\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
             "+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 0.512s\n",
+            "updated 1 package and audited 36 packages in 1.537s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
@@ -61,10 +44,30 @@
             "\u001b[K\u001b[?25h"
           ]
         }
+      ],
+      "source": [
+        "!npm install localtunnel"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "AnpMPOsR_91p",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e6937bd7-7adb-4a99-ebf2-443588558b73"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting app.py\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile app.py\n",
         "\n",
@@ -79,10 +82,10 @@
         "         \"\"\"\n",
         "         )\n",
         "st.write(\"This is a simple image classification web app to predict facial emotions\")\n",
-        "file = st.file_uploader(\"Please upload an image file\", type=[\"jpg\", \"png\"])\n",
+        "file = st.file_uploader(\"Please upload an image:\", type=[\"jpg\", \"png\"])\n",
         "\n",
-        "generate_pred = st.sidebar.button('Predict')\n",
-        "model = tf.keras.models.load_model('/content/my_model.hdf5')\n",
+        "generate_pred = st.button('Predict')\n",
+        "model = tf.keras.models.load_model('/content/vgg_model.hdf5')\n",
         "\n",
         "def import_and_predict(image_data, model):\n",
         "  size = (48, 48)\n",
@@ -94,7 +97,7 @@
         "\n",
         "if generate_pred:\n",
         "  image = Image.open(file)\n",
-        "  with st.beta_expander('Cell Image', expanded = True):\n",
+        "  with st.expander('Cell Image', expanded = True):\n",
         "    st.image(image, use_column_width = True)\n",
         "  pred = import_and_predict(image, model)\n",
         "  labels = ['Angry', \n",
@@ -105,51 +108,56 @@
         "           'Surprised', \n",
         "           'Neutral']\n",
         "  st.title('Prediction of image is: {}'.format(labels[np.argmax(pred)]))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "AnpMPOsR_91p",
-        "outputId": "aadc7e11-da9e-49e4-9e2b-b8b001cf20b6"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting app.py\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!streamlit run /content/app.py &>/content/logs.txt &\n",
-        "\n",
-        "!npx localtunnel --port 8501"
-      ],
+      "execution_count": null,
       "metadata": {
+        "id": "CKs2BIBbwTJv",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "CKs2BIBbwTJv",
-        "outputId": "4d04858e-f4de-4b85-9622-57d31a8f9055"
+        "outputId": "fa3ecd43-3c03-4e89-93e4-cedc22cad264"
       },
-      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[K\u001b[?25hnpx: installed 22 in 5.023s\n",
-            "your url is: https://small-kings-act-35-245-93-57.loca.lt\n",
-            "^C\n"
+            "\u001b[K\u001b[?25hnpx: installed 22 in 4.162s\n",
+            "your url is: https://busy-impalas-stop-34-72-16-12.loca.lt\n"
           ]
         }
+      ],
+      "source": [
+        "!streamlit run /content/app.py &>/content/logs.txt &\n",
+        "\n",
+        "!npx localtunnel --port 8501"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Jt5owTzKTOvE"
+      },
+      "execution_count": null,
+      "outputs": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
