--- a/code/application.ipynb
+++ b/code/application.ipynb
@@ -2,62 +2,24 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 20,
       "metadata": {
         "id": "1o5HuTwGt7en"
       },
       "outputs": [],
       "source": [
-        "!pip install -q streamlit"
+        "!pip install streamlit --quiet"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 60,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Awdnty52yPYm",
-        "outputId": "f4ec8385-3268-4cf7-9709-876478df09a7"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35msaveError\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
-            "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
-            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No description\n",
-            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No repository field.\n",
-            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No README data\n",
-            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
-            "\u001b[0m\n",
-            "+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 1.537s\n",
-            "\n",
-            "3 packages are looking for funding\n",
-            "  run `npm fund` for details\n",
-            "\n",
-            "found \u001b[92m0\u001b[0m vulnerabilities\n",
-            "\n",
-            "\u001b[K\u001b[?25h"
-          ]
-        }
-      ],
-      "source": [
-        "!npm install localtunnel"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {
         "id": "AnpMPOsR_91p",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "e6937bd7-7adb-4a99-ebf2-443588558b73"
+        "outputId": "b55b824a-53f5-4e83-fd5d-726e086287de"
       },
       "outputs": [
         {
@@ -75,13 +37,13 @@
         "import tensorflow as tf\n",
         "import numpy as np\n",
         "from PIL import Image, ImageOps\n",
-        "\n",
+        "import webbrowser\n",
         "\n",
         "st.write(\"\"\"\n",
-        "         # Facial Emotion Classifier\n",
-        "         \"\"\"\n",
-        "         )\n",
-        "st.write(\"This is a simple image classification web app to predict facial emotions\")\n",
+        "        # Facial Emotion Classifier\n",
+        "        \"\"\"\n",
+        "        )\n",
+        "st.write(\"This is an image classification web app using developed in order to predict facial expressions\")\n",
         "file = st.file_uploader(\"Please upload an image:\", type=[\"jpg\", \"png\"])\n",
         "\n",
         "generate_pred = st.button('Predict')\n",
@@ -101,37 +63,82 @@
         "    st.image(image, use_column_width = True)\n",
         "  pred = import_and_predict(image, model)\n",
         "  labels = ['Angry', \n",
-        "           'Disgust', \n",
-        "           'Fear', \n",
-        "           'Happy', \n",
-        "           'Sad', \n",
-        "           'Surprised', \n",
-        "           'Neutral']\n",
-        "  st.title('Prediction of image is: {}'.format(labels[np.argmax(pred)]))"
+        "          'Disgust', \n",
+        "          'Fear', \n",
+        "          'Happy', \n",
+        "          'Sad', \n",
+        "          'Surprised', \n",
+        "          'Neutral']\n",
+        "  st.write('Prediction of image is: {}'.format(labels[np.argmax(pred)]))\n",
+        "\n",
+        "with st.expander(\"Background\"):\n",
+        "  st.write(\"Facial expressions are a vital part of human communication, and for most people, recognizing them is second nature. For individuals with autism and others in the community, however, may have a more difficult time recognizing and comprehending these expressions. To help individuals overcome this challenge, the project aims to develop a deep neural network model that can accurately recognize facial expressions. In order to achieve this, a dataset containing photos of people with different expressions was used to train and test the model. This dataset includes images with a variety of expressions, including happy, sad, angry,  surprised, neutral, fear and disgust. Once the model was trained and optimized, it was integrated into an application that can analyze personal photos and predict the facial expression in the image. Once further optimized, this will provide a valuable tool for those with autism and those in the community to better understand the emotions of those around them. This application could also be valuable in the psychology and education fields, where accurate recognition of facial expressions is crucial for understanding human behavior and interactions. Overall, this project has the potential to improve the lives of many individuals and contribute to the advancement of technology in various fields.\")\n",
+        "with st.expander(\"About\"):\n",
+        "  st.write(\"This project uses dataset from a Kaggle challenge, Challenges in Representation Learning: Facial Recognition Challenge. The dataset contains 48x48 greyscale images of faces with different expressions. For this multiclass classification problem there are seven categories - angry, disgust, fear, happy, sad, surprise and neutral - that the expression can be classified as. The goal for this project is to create a machine learning model using neural networks that can accurately predict the facial expression shown. Along with using the dataset's photos, personal photos of people with different facial expressions will be used in order to test this model's accuracy.\")\n",
+        "st.markdown(\"[![Title](<https://img.icons8.com/material-outlined/48/000000/github.png>)](<https://github.com/abbycarbaugh/DS400-Capstone-Project>)\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "!npm install localtunnel"
+      ],
       "metadata": {
-        "id": "CKs2BIBbwTJv",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fa3ecd43-3c03-4e89-93e4-cedc22cad264"
+        "id": "NOcK41yQH6w9",
+        "outputId": "32177732-fc82-4ecf-f191-fa44899fdfc6"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35msaveError\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
+            "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No description\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No repository field.\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No README data\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
+            "\u001b[0m\n",
+            "+ localtunnel@2.0.2\n",
+            "updated 1 package and audited 36 packages in 1.028s\n",
+            "\n",
+            "3 packages are looking for funding\n",
+            "  run `npm fund` for details\n",
+            "\n",
+            "found \u001b[92m0\u001b[0m vulnerabilities\n",
+            "\n",
+            "\u001b[K\u001b[?25h"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 61,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CKs2BIBbwTJv",
+        "outputId": "a8d2f97a-2cf4-4113-af77-3b33f79365e1"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[K\u001b[?25hnpx: installed 22 in 4.162s\n",
-            "your url is: https://busy-impalas-stop-34-72-16-12.loca.lt\n"
+            "\u001b[K\u001b[?25hnpx: installed 22 in 4.507s\n",
+            "your url is: https://cold-banks-hear-34-125-245-184.loca.lt\n",
+            "^C\n"
           ]
         }
       ],
       "source": [
-        "!streamlit run /content/app.py &>/content/logs.txt &\n",
+        "!streamlit run app.py &>/content/logs.txt & \n",
         "\n",
         "!npx localtunnel --port 8501"
       ]
@@ -140,9 +147,9 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Jt5owTzKTOvE"
+        "id": "nWEmRDeTQmge"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     }
   ],
